@@ -138,6 +138,9 @@ ConnectionWrapper.0=Can't set autocommit to 'true' on an XAConnection
 ConnectionWrapper.1=Can't call commit() on an XAConnection associated with a global transaction
 ConnectionWrapper.2=Can't call rollback() on an XAConnection associated with a global transaction
 
+CreateTableStatement.0=Parameter ''{0}'' must not be null.
+CreateTableStatement.1=Parameter ''{0}'' must not contain null values.
+
 DatabaseMetaData.0=NULL typeinfo not supported.
 DatabaseMetaData.1=Internal error while parsing callable statement metadata (unknown nullability value fount)
 DatabaseMetaData.2=Table not specified.
